...
        app:showAsAction="always" />
    <item
        android:id="@+id/advanced_search_item"
        android:title="Advanced Search" />
    <item
        android:id="@+id/action_settings"
        android:title="Settings" />
    <item
        android:id="@+id/action_ingredient_list"
        android:title="View All Ingredients"/>
    <item
        android:id="@+id/action_retrieve_recipe"
        android:title="Retrieve Recipe"/>
...
