...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/text_recipe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recipe Name"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="25sp" />

...
