<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_view_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_to_cart"
        android:title="Add to Cart"
        android:onClick="onAddToCartSelected"/>
    <item
        android:id="@+id/action_edit_recipe"
        android:title="@string/edit_recipe"/>
    <item
        android:id="@+id/action_delete_recipe"
        android:title="@string/delete_recipe"
        android:onClick="onDeleteRecipeSelected" />
    <item
        android:id="@+id/action_share_recipe"
        android:title="@string/share_recipe" />
    <item
        android:id="@+id/action_convert_unit"
        android:title="@string/convert_units"
        android:onClick="onConvertUnitSelected"/>
    <item
        android:id="@+id/action_scale_recipe"
        android:title="@string/scale_recipe"
        android:onClick="onScaleRecipeSelected"/>
    <item
        android:id="@+id/action_present_recipe"
        android:title="@string/present_recipe"
        android:onClick="onPresentRecipeSelected"/>
</menu>