<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_background"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@color/white"
        android:textColor="@color/white"
        app:backgroundTint="@color/white"
        android:hint="Username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@color/white"
        app:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@color/white"
        app:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="Confirm Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:text="Register"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:text="Already Registered?"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="Login"/>

    </LinearLayout>

</LinearLayout>